--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -578,7 +578,6 @@
     <Content Include="Views\Attachments\Details.cshtml" />
     <Content Include="Views\Attachments\Edit.cshtml" />
     <Content Include="Views\Attachments\Index.cshtml" />
-    <Content Include="Views\Upload\Index.cshtml" />
     <Content Include="Views\FileUpload\Edit.cshtml" />
     <Content Include="Views\FileUpload\Index.cshtml" />
     <Content Include="Views\FileUpload\_Files.cshtml" />
@@ -589,6 +588,7 @@
     <Folder Include="Controllers\gallery\" />
     <Folder Include="lib\" />
     <Folder Include="UploadFiles\temp\" />
+    <Folder Include="Views\Upload\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
