--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -464,6 +464,14 @@
     <Content Include="img\bg_direction_nav.png" />
     <Content Include="img\glyphicons-halflings-white.png" />
     <Content Include="img\glyphicons-halflings.png" />
+    <Content Include="img\icoding\icoding.jpg" />
+    <Content Include="img\icoding\logoList.jpg" />
+    <Content Include="img\icoding\logoList_0000_scratch.png" />
+    <Content Include="img\icoding\logoList_0001_arduino.png" />
+    <Content Include="img\icoding\logoList_0002_raspberryPi.png" />
+    <Content Include="img\icoding\logoList_0003_codeorg.png" />
+    <Content Include="img\icoding\logoList_0004_codeclub.png" />
+    <Content Include="img\icoding\stem.jpg" />
     <Content Include="img\logo.png" />
     <Content Include="img\nivo-bullets.png" />
     <Content Include="img\section-image-1.png" />
