--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -460,8 +460,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\Allen.jpg" />
     <Content Include="img\avatar.png" />
     <Content Include="img\bg_direction_nav.png" />
+    <Content Include="img\Cathy.jpg" />
+    <Content Include="img\Daniel.jpg" />
     <Content Include="img\glyphicons-halflings-white.png" />
     <Content Include="img\glyphicons-halflings.png" />
     <Content Include="img\icoding\icoding.jpg" />
@@ -478,21 +481,20 @@
     <Content Include="img\service1.jpg" />
     <Content Include="img\service2.jpg" />
     <Content Include="img\service3.jpg" />
-    <Content Include="img\slides\1.jpg" />
+    <Content Include="img\slides\arduino.jpg" />
     <Content Include="img\slides\2.jpg" />
     <Content Include="img\slides\3.jpg" />
     <Content Include="img\slides\4.jpg" />
-    <Content Include="img\slides\5.jpg" />
+    <Content Include="img\slides\python.jpg" />
+    <Content Include="img\slides\scratch.jpg" />
+    <Content Include="img\slides\wait.jpg" />
     <Content Include="img\slides\6.jpg" />
     <Content Include="img\slides\7.jpg" />
     <Content Include="img\stem-1.png" />
     <Content Include="img\stem-2.png" />
     <Content Include="img\stem-3.png" />
     <Content Include="img\stem-4.png" />
-    <Content Include="img\team1.jpg" />
-    <Content Include="img\team2.jpg" />
-    <Content Include="img\team3.jpg" />
-    <Content Include="img\team4.jpg" />
+    <Content Include="img\tom.jpg" />
     <Content Include="img\works\1.jpg" />
     <Content Include="img\works\2.jpg" />
     <Content Include="img\works\3.jpg" />
@@ -501,6 +503,7 @@
     <Content Include="img\works\6.jpg" />
     <Content Include="img\works\7.jpg" />
     <Content Include="img\works\8.jpg" />
+    <Content Include="img\qrcode.jpg" />
     <Content Include="Scripts\animate.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
