--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -464,6 +464,7 @@
     <Content Include="img\avatar.png" />
     <Content Include="img\bg_direction_nav.png" />
     <Content Include="img\Cathy.jpg" />
+    <Content Include="img\Colors.jpg" />
     <Content Include="img\Daniel.jpg" />
     <Content Include="img\glyphicons-halflings-white.png" />
     <Content Include="img\glyphicons-halflings.png" />
