--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -466,6 +466,7 @@
     <Content Include="img\Cathy.jpg" />
     <Content Include="img\Colors.jpg" />
     <Content Include="img\Daniel.jpg" />
+    <Content Include="img\favicon.ico" />
     <Content Include="img\glyphicons-halflings-white.png" />
     <Content Include="img\glyphicons-halflings.png" />
     <Content Include="img\icoding\icoding.jpg" />
